services/devapp-base/eip.tf
resource "aws_eip" "eip" {
  vpc         = true
  depends_on  = [ aws_internet_gateway.igw ]

  tags = merge(map(
    "Name", "${var.resrc_prefix_nm}-eip"
  ), var.extra_tags)

}
